--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+# IDE and editors
 .idea/
+.vscode/
+*.swp
+*.swo
+
+# Dependencies
 node_modules/
+
+# Logs
+*.log
+server.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+dist/
+build/
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Environment files
+.env
+.env.local
+.env.*.local
