--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx serve .",
+    "start": "npx serve .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
