feat: Introduce new branding, PWA SVG icons, and a redesigned landing page UI.

--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,30 @@
 {
-    "name": "Public HTML Service - Developer Tools",
-    "short_name": "Dev Tools",
-    "description": "A collection of handy developer utility tools including formatters, converters, and generators.",
+    "name": "Dev Hub — Utility Tools",
+    "short_name": "Dev Hub",
+    "description": "A curated suite of developer tools — format, convert, generate, and explore.",
     "start_url": "/public-html-service/",
     "display": "standalone",
-    "background_color": "#f8f9fa",
-    "theme_color": "#0d6efd",
+    "background_color": "#0f172a",
+    "theme_color": "#6366f1",
     "orientation": "any",
     "icons": [
         {
-            "src": "asset/icon-192.png",
+            "src": "assets/images/icon-192.svg",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/svg+xml",
+            "purpose": "any"
         },
         {
-            "src": "asset/icon-512.png",
+            "src": "assets/images/icon-512.svg",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/svg+xml",
+            "purpose": "any"
+        },
+        {
+            "src": "assets/images/icon-192.svg",
+            "sizes": "192x192",
+            "type": "image/svg+xml",
+            "purpose": "maskable"
         }
     ],
     "categories": [
